Unified: Keep system tray bubble aligned to the bottom of the desktop.

Before this change the bubble was shown above the system tray icons
even when the shelf position was left or right.

Bug: 864929
Test: manual
Change-Id: I8258705be68a85af32aa7d46943ef32a46ee8c9a
Reviewed-on: https://chromium-review.googlesource.com/1141750
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576382}
Former-commit-id: cfcd590a5b120a77f8a0df4491ecbde0ec8e37e0